--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "axios-mock-adapter": "^1.15.0",
+    "element-ui": "^2.4.11",
+    "save-dev": "^2.0.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
@@ -18,6 +22,7 @@
     "@vue/cli-service": "^3.2.0",
     "@vue/test-utils": "^1.0.0-beta.20",
     "chai": "^4.1.2",
+    "mockjs": "^1.0.1-beta3",
     "vue-template-compiler": "^2.5.17"
   },
   "postcss": {
