--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@vue/cli-service": "^3.4.0",
     "@vue/test-utils": "^1.0.0-beta.20",
     "chai": "^4.1.2",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
     "mocha": "^5.2.0",
     "mockjs": "^1.0.1-beta3",
     "mz": "2.4.0",
